assets/css/style.css
/*Google fonts*/

@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik&display=swap');

* {
    margin: 0px;
    padding: 0;
    border: none;
    text-decoration: none;
}

h1 {
    font-family: Rubik, sans-serif;
    color: #002060;
}

h2, h3, h4 {
    font-family: Rubik, sans-serif;
    color: #002060;
}

p {
    font-family: Roboto, sans-serif;
    color: #002060;
}

/* Header */

header {
    background-color: #C5E0B4;
    height: 6em;
    padding: 20px;
}

.heading {
    text-align: center;
}

ul {
    display: flex;
    align-items: center;
    justify-content: center;
}

li {
    padding: 20px;
    list-style-type: none;
    
}

li > a {
    color: #002060;
    font-family: Roboto, sans-serif;
    font-size: 1.5rem;
}

li > a:hover {
    border-bottom: 2px solid #002060;

}

.active {
    border-bottom: 2px solid #002060;
}

/* main */

main {
    background-color: #E2F0D9;
}

footer {
    background-color: #C5E0B4;
}

/* Play button */

.btn-outer {
    padding: 20px;
}

.play-btn {
    padding: 20px;
    display: flex;
    justify-content: center;
    background-color: #BDD7EE;
    border-radius: 5px;
    border: 2px solid #002060;
    width: fit-content;
    align-items: center;
    margin: auto;
}

.play-btn > a {
    color: #002060;
    font-size: 2rem;
    font-family: Rubik, sans-serif;
}

.play-btn:hover {
    background-color: #9DC3E6;
    cursor: pointer;
}

/* Rules */

.rules-outer > h2 {
    text-align: center;
    padding-top: 20px;
}

.rules {
    display: flex;
    justify-content: center;
    padding: 10px;
    font-size: 1.6rem;
}

.level-text {
    padding: 5px;
    text-align: center;
}

.lv1-rules {
    border: 2px solid #002060;
    border-radius: 5px;
    width: fit-content;
    margin: 20px auto 20px;
}

.lv2-rules {
    border: 2px solid #ED7D31;
    border-radius: 5px;
    width: fit-content;
    margin: 20px auto 20px;
}

.lv3-rules {
    border: 2px solid #C00000;
    border-radius: 5px;
    width: fit-content;
    margin: 20px auto 20px;
}

.rules > p {
    position: relative;
    top: 20px;
    font-size: 1rem;
}

.img-rules {
    height: 3rem;
    padding: 10px;
}

/* Game page */

/* Score */

.score {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 12vh;
    padding: 30px;
}

.score h2 {
    font-size: 2rem;
    font-weight: bold;
}

.score p {
    text-align: center;
    font-size: 2rem;
    font-family: Rubik, sans-serif;
    padding: 10px;
}

/* match */

main h2 {
    text-align: center;
    font-size: 1.5rem;
}

.hands {
    height: 15rem;
    display: flex;
    justify-content: space-around;
}

.player-hand {
    transform: rotate(243deg);
}

.computer-hand {
    transform: rotateY(180deg) rotate(243deg);
}

.options-outer {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.box {
    text-align: center;
}

.options {
    height: 5rem;
    padding: 1rem;
}

